# greedy_enum

./: Cargo.toml
crates/greedy_enum/: Cargo.toml
crates/greedy_enum/src/: lib.rs
crates/greedy_enum/tests/: simple_test.rs
crates/greedy_enum_derive/: Cargo.toml
crates/greedy_enum_derive/src/: lib.rs
