[package]
name = "greedy_enum"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
greedy_enum_derive = { path = "../greedy_enum_derive", version = "=0.1.0" }
thiserror = { workspace = true }
