[package]
name = "greedy_enum_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
greedy_enum = { path = "../greedy_enum" }
